Fix Styling For Title In About Section
Fix the styling for the title in About section because it was too close
to the body of text and should be further back. Also, add in a section
tag for recommendations as it is a sub section of about us this is for
proper HTML5 layout.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -157,6 +157,10 @@ blockquote:before {
 #sectionAboutMe p {
 }
 
+#aboutMeTitle {
+  margin-bottom: .67em;
+}
+
 .divAboutMeImage {
   margin-top: 22px;
 }
